--- a/pages/login.html
+++ b/pages/login.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="app-container">
+      <div class="content-container">
+        <div class="login-container">
+          <div class="login-title-container">
+            <p class="login-text">로그인</p>
+          </div>
+          <form>
+            <div class="login-input-container">
+              <input type="text" class="login-input-id" />
+              <input type="password" class="login-input-password" />
+            </div>
+            <div class="login-button-container">
+              <input type="submit" class="login-button" value="로그인" />
+              <div>또는</div>
+              <input
+                type="button"
+                class="login-code-button"
+                value="로그인 코드 사용하기"
+              />
+            </div>
+          </form>
+          <div class="login-footer-container">
+            <div>넷플릭스 회원이 아닌가요? 지금 가입하세요.</div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-container"></div>
+    </div>
+  </body>
 </html>
