--- a/video.html
+++ b/video.html
@@ -3,43 +3,34 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>NETFLIX</title>
-
-        <style></style>
+        <title>Netflix 홈</title>
+        <link rel="stylesheet" href="video.css" />
     </head>
     <body>
-        <header>
-            <div><img src="" alt="#" /></div>
-            <div id="main_nav">
-                <ul>
-                    <li></li>
-                </ul>
-            </div>
-            <div id="sub_nav"></div>
-        </header>
-        <main>
-            <div id="popular_movie">
-                <div id="popular_movie_img">
-                    <img src="" alt="#" />
+        <div class="hero">
+            <header>
+                <div class="logo">NETFLIX</div>
+                <div class="buttons">
+                    <button class="lang-btn">
+                        :자오선이_있는_지구: 한국어 ▾
+                    </button>
+                    <button class="login-btn">로그인</button>
                 </div>
-                <div id="popular_movie_info">
-                    <div><h2 id="title">title</h2></div>
-                    <div><p id="overview">overview</p></div>
-                    <div><h4 id="rank">rank</h4></div>
+            </header>
+            <div class="content">
+                <h1>영화, 시리즈 등을<br />무제한으로</h1>
+                <p class="sub-text">
+                    5,500원으로 시작하세요. 멤버십은 언제든지 해지 가능합니다.
+                </p>
+                <p class="small-text">
+                    시청할 준비가 되었나요? 멤버십을 등록하거나, 시청을 위해
+                    이메일 주소를 입력하세요.
+                </p>
+                <div class="email-box">
+                    <input type="email" placeholder="이메일 주소" />
+                    <button class="start-btn">시작하기 &gt;</button>
                 </div>
             </div>
-            <div class="contents">
-                <div class="contents_title"></div>
-                <div class="contents_list"></div>
-            </div>
-            <div class="contents">
-                <div class="contents_title"></div>
-                <div class="contents_list"></div>
-            </div>
-            <div class="contents">
-                <div class="contents_title"></div>
-                <div class="contents_list"></div>
-            </div>
-        </main>
+        </div>
     </body>
 </html>
