--- a/pages/userInfo.html
+++ b/pages/userInfo.html
@@ -1,57 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Netflix Account Page</title>
 
     <style>
-      * {
-        margin: 0px;
-        padding: 0px;
+      div,
+      table,
+      td,
+      p {
+        margin: 15px;
+        padding: 15px;
         box-sizing: border-box;
       }
+
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      /* 헤더 스타일 */
       .header {
         width: 100vw;
         height: 50px;
         display: flex;
+        align-items: center; /* 세로 가운데 정렬 */
         justify-content: start;
         background-color: black;
+        padding: 0px; /* 양옆 여백 */
+        margin: 0px;
+      }
+
+      /* Netflix 로고 스타일 */
+      .Netflix-Logo {
+        height: 100%; /* 헤더 높이에 맞게 */
+        align-self: flex-start; /* 왼쪽 정렬 */
       }
 
       table {
         width: 100%;
-        border-collapse: collapse;
-        table-layout: fixed; /* 테이블 너비 고정 */
+        table-layout: fixed;
       }
-      .info {
-        text-decoration-color: darkgray;
+      td {
+        text-align: center; /* 기본적으로 모든 셀 중앙 정렬 */
+        padding: 15px;
+      }
+
+      td:nth-child(2) {
+        text-align: left; /* 두 번째 열만 왼쪽 정렬 */
       }
 
       .title {
         font-size: 45px;
         font-weight: lighter;
-        margin: 10px;
       }
 
       #subtitle {
         justify-content: start;
-        margin: 10px;
       }
 
       #content {
-        text-align: center !important;
+        text-align: center;
       }
-      #link {
+
+      td#link {
         text-align: right;
+        color: blue;
+        text-decoration: underline;
+        cursor: pointer; /* 마우스를 올리면 손가락 모양 */
       }
 
       .container {
-        max-width: 900px; /* 본문이 너무 넓지 않도록 제한 */
-        margin: 50px auto; /* 상하 여백 50px, 좌우 중앙 정렬 */
-        padding: 0 20px; /* 좌우 20px 여백 추가 */
+        max-width: 900px;
+        margin: 50px auto;
+        padding: 0 20px;
       }
     </style>
   </head>
@@ -68,29 +93,32 @@
       <hr />
 
       <div class="creditInfo">
-        <table id="info">
+        <table>
           <tr>
             <td><p id="subtitle">멤버십 & 결제 정보</p></td>
-            <td><p id="link">계정 이메일 변경</p></td>
+            <td>chichi0512@gmail.com</td>
+            <td id="link">계정 이메일 변경</td>
           </tr>
           <tr>
             <td></td>
-            <td><p>비밀번호: ******</p></td>
-            <td><p id="link">비밀번호 변경</p></td>
+            <td>비밀번호: ******</td>
+            <td id="link">비밀번호 변경</td>
           </tr>
           <tr>
             <td></td>
-            <td><p>전화번호: 010-1234-5678</p></td>
-            <td><p id="link">휴대폰 번호 변경</p></td>
+            <td>전화번호: 010-1234-5678</td>
+            <td id="link">휴대폰 번호 변경</td>
           </tr>
           <tr>
             <td></td>
             <td>신용카드: **** **** **** 4324</td>
-            <td><p id="link">결제 정보 관리</p></td>
+            <td id="link">결제 정보 관리</td>
           </tr>
-          <td></td>
-          <td><p>다음 결제일은 2025년 4월 13일입니다.</p></td>
-          <td><p id="link">예비 결제 수단 등록</p></td>
+          <tr>
+            <td></td>
+            <td>다음 결제일은 2025년 4월 13일입니다.</td>
+            <td id="link">예비 결제 수단 등록</td>
+          </tr>
         </table>
         <hr />
       </div>
@@ -99,12 +127,8 @@
         <table>
           <tr>
             <td><p id="subtitle">멤버십 상세 정보</p></td>
-            <td>
-              <p id="content">프리미엄</p>
-            </td>
-            <td>
-              <p id="link">멤버십 변경</p>
-            </td>
+            <td id="content">프리미엄</td>
+            <td id="link">멤버십 변경</td>
           </tr>
         </table>
         <hr />
@@ -114,13 +138,11 @@
         <table>
           <tr>
             <td><p id="subtitle">보안 & 개인 정보</p></td>
-            <td>
-              <p id="content">
-                이 계정에 대한 접근 권한을 관리하고 가장 최근에 사용된 디바이스
-                등을 확인하세요.
-              </p>
+            <td id="content">
+              이 계정에 대한 접근 권한을 관리하고 가장 최근에 사용된 디바이스
+              등을 확인하세요.
             </td>
-            <td id="link">멤버십 변경</td>
+            <td id="link">보안 설정</td>
           </tr>
         </table>
         <hr />
