feat: update video.html file
feat: update video.html class name

feat: update video.html title

feat: change folde #2

--- a/pages/video.html
+++ b/pages/video.html
@@ -3,17 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Netflix 홈</title>
+        <title>Netflix</title>
         <link rel="stylesheet" href="video.css" />
     </head>
     <body>
-        <div class="hero">
+        <div class="home">
             <header>
                 <div class="logo">NETFLIX</div>
                 <div class="buttons">
-                    <button class="lang-btn">
-                        :자오선이_있는_지구: 한국어 ▾
-                    </button>
+                    <button class="lang-btn">한국어 ▾</button>
                     <button class="login-btn">로그인</button>
                 </div>
             </header>
