--- a/pages/membership.html
+++ b/pages/membership.html
@@ -30,6 +30,10 @@
         font-size: 14px;
         color: #333;
         cursor: pointer;
+        background-color: red;
+        color: white;
+        padding: 1rem;
+        border-radius: 15px;
       }
       /* 메인 컨텐츠 스타일 */
       main {
