feat: change folder

--- a/pages/video.html
+++ b/pages/video.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="video.css" />
     </head>
     <body>
-        <div class="home">
+        <div class="hero">
             <header>
                 <div class="logo">NETFLIX</div>
                 <div class="buttons">
