--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
       <div class="header">
-        <img src="/api/placeholder/120/40" alt="Netflix Logo" class="logo" />
+        <img
+          src="./pages/static/Netflix-Logo.jpg"
+          alt="Netflix Logo"
+          class="logo"
+        />
       </div>
       <div class="profile-selection">
         <h1 class="profile-title">넷플릭스를 시청할 프로필을 선택하세요.</h1>
