--- a/index.html
+++ b/index.html
@@ -20,33 +20,47 @@
         <div class="profiles">
           <div class="profile">
             <div class="profile-image">
-              <div class="profile-blue" style="width: 100%; height: 100%"></div>
+              <a href="./pages/video.html">
+                <div
+                  class="profile-blue"
+                  style="width: 100%; height: 100%"
+                ></div>
+              </a>
             </div>
-            <span class="profile-name">길동</span>
+            <span class="profile-name">박준영</span>
           </div>
           <div class="profile">
             <div class="profile-image">
-              <div class="profile-red" style="width: 100%; height: 100%"></div>
+              <a href="./pages/login/login.html">
+                <div
+                  class="profile-red"
+                  style="width: 100%; height: 100%"
+                ></div>
+              </a>
             </div>
-            <span class="profile-name">민지</span>
+            <span class="profile-name">양성욱</span>
           </div>
           <div class="profile">
             <div class="profile-image">
-              <div
-                class="profile-yellow"
-                style="width: 100%; height: 100%"
-              ></div>
+              <a href="./pages/membership/membership.html"
+                ><div
+                  class="profile-yellow"
+                  style="width: 100%; height: 100%"
+                ></div
+              ></a>
             </div>
-            <span class="profile-name">영희</span>
+            <span class="profile-name">김예림</span>
           </div>
           <div class="profile">
             <div class="profile-image">
-              <div
-                class="profile-green"
-                style="width: 100%; height: 100%"
-              ></div>
+              <a href="./pages/yeom/userInfo.html"
+                ><div
+                  class="profile-green"
+                  style="width: 100%; height: 100%"
+                ></div
+              ></a>
             </div>
-            <span class="profile-name">어린이</span>
+            <span class="profile-name">염정우</span>
           </div>
         </div>
         <button class="manage-profiles">프로필 관리</button>
